--- a/user/src/components/Form/SubmissionForm.css
+++ b/user/src/components/Form/SubmissionForm.css
@@ -145,7 +145,7 @@
   
   button {
     background-color: #007bff;
-    color: gray;
+    color: aliceblue;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
