--- a/user/src/components/Calendar/AvailabilityCalendar.css
+++ b/user/src/components/Calendar/AvailabilityCalendar.css
@@ -21,7 +21,6 @@
     box-sizing: border-box;
     padding: 5px;
     font-size: 16px;
-    color: gray;
   }
 
   .react-calendar__tile--active{
@@ -30,8 +29,8 @@
   }
   
   .disabled-tile {
-    background-color: #DC143C !important; 
-    color: #d0d0d0; 
+    background-color: #e32323 !important; 
+    color: white !important; 
     cursor: not-allowed; 
     opacity: 0.8;
   }
