--- a/user/src/components/Form/SubmissionForm.css
+++ b/user/src/components/Form/SubmissionForm.css
@@ -144,8 +144,7 @@
   }
   
   button {
-    background-color: #007bff;
-    color: aliceblue;
+    background-color: #4e9df3;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
