--- a/vc/src/components/Form/ApplicationForm.css
+++ b/vc/src/components/Form/ApplicationForm.css
@@ -56,6 +56,7 @@
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    font-size: 14px;
   }
 
   .small-input {
@@ -144,18 +145,29 @@
   }
   
   button {
-    background-color: #4e9df3;
+    color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-top: 10px;
+    font-weight: bold;
     width: 20%;
+    font-size: 15px;
   }
   
-  button:disabled {
-    background-color: #ccc;
-  }
+ .submit-buttons{
+  display: flex;
+  justify-content: space-between;
+ }
+
+ .approve{
+  background-color: green;
+ }
+
+ .reject{
+  background-color: red;
+ }
 
   @media (max-width: 768px) {
     .input-group {
