--- a/vc/src/pages/VCPanel.css
+++ b/vc/src/pages/VCPanel.css
@@ -12,7 +12,8 @@
     left: 0;
 }
 
-.dashboard {
+.dashboard, .calendar-container
+ {
     flex-grow: 1;           
     margin-left: 250px;     
     padding: 20px;
