--- a/admin/src/pages/AdminPanel.css
+++ b/admin/src/pages/AdminPanel.css
@@ -3,18 +3,8 @@
     height: 100vh;
 }
 
-.sidebar {
-    width: 200px;         
-    height: 100vh;
-    padding: 20px;
-    position: fixed;     
-    top: 0;
-    left: 0;
-}
-
-.dashboard {
+.dashboard, .calendar-container
+ {
     flex-grow: 1;           
-    margin-left: 250px;     
     padding: 20px;
-    overflow-y: auto;     
 }
