--- a/vc/src/pages/VCPanel.css
+++ b/vc/src/pages/VCPanel.css
@@ -3,19 +3,8 @@
     height: 100vh;
 }
 
-.sidebar {
-    width: 200px;         
-    height: 100vh;
-    padding: 20px;
-    position: fixed;     
-    top: 0;
-    left: 0;
-}
-
-.dashboard, .calendar-container
+.dashboard, .calendar-container, .notification-page
  {
     flex-grow: 1;           
-    margin-left: 250px;     
     padding: 20px;
-    overflow-y: auto;     
 }
