--- a/vc/src/components/Notification/Notification.css
+++ b/vc/src/components/Notification/Notification.css
@@ -30,7 +30,7 @@
   }
   
   .toggle-buttons button {
-    background-color: #f0f0f0;
+    background-color: #f0f0f0 !important;
     border: none;
     padding: 10px 50px;
     cursor: pointer;
@@ -40,12 +40,12 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    color: black;
+    color: black !important;
   }
   
   .toggle-buttons .active {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #4CAF50 !important;
+    color: white !important;
   }
   
   .notifications {
@@ -73,7 +73,7 @@
     width: 11%;
     margin: 0;
     font-size: 15px;
-    background-color: aqua;
+    background-color: aqua !important;
   }
 
   .markAsReadButton:disabled{
