--- a/admin/src/components/Report/ViewReport.css
+++ b/admin/src/components/Report/ViewReport.css
@@ -7,9 +7,17 @@
     background-position: center;
 }
 
-.background-image{
-    background-image: url('../../images/header1.jpg');
-    height: 120vh; 
+.background-image-report{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 120vh;
+    background-image: url('../../images/background_image.jpg');
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.7);
+    z-index: -1;
 }
 
 .report-cards-container {
