--- a/vc/src/components/ForgotPassword/ForgotPassword.css
+++ b/vc/src/components/ForgotPassword/ForgotPassword.css
@@ -26,7 +26,7 @@ h2 {
     text-align: left;
 }
 
-input[type="email"] {
+.input-email {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
